platform/stack/packages/application/penpot/manifests/install.yaml
# PENPOT INSTALL RESOURCES
# This file is auto-generated with 'platform/stack/packages/application/penpot/generate-manifests.sh'
---
# Source: penpot/templates/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: penpot-backend
  namespace: adhar-system
  labels:
    helm.sh/chart: penpot-1.9.0
    app.kubernetes.io/name: penpot
    app.kubernetes.io/instance: penpot
    app.kubernetes.io/version: "2.17.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 6060
      targetPort: 6060
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: penpot-backend
    app.kubernetes.io/instance: penpot
---
# Source: penpot/templates/exporter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: penpot-exporter
  namespace: adhar-system
  labels:
    helm.sh/chart: penpot-1.9.0
    app.kubernetes.io/name: penpot
    app.kubernetes.io/instance: penpot
    app.kubernetes.io/version: "2.17.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 6061
      targetPort: 6061
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: penpot-exporter
    app.kubernetes.io/instance: penpot
---
# Source: penpot/templates/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: penpot
  namespace: adhar-system
  labels:
    helm.sh/chart: penpot-1.9.0
    app.kubernetes.io/name: penpot
    app.kubernetes.io/instance: penpot
    app.kubernetes.io/version: "2.17.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: penpot-frontend
    app.kubernetes.io/instance: penpot
---
# Source: penpot/templates/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penpot-backend
  namespace: adhar-system
  labels:
    helm.sh/chart: penpot-1.9.0
    app.kubernetes.io/name: penpot
    app.kubernetes.io/instance: penpot
    app.kubernetes.io/version: "2.17.2"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: penpot-backend
      app.kubernetes.io/instance: penpot
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: penpot-backend
        app.kubernetes.io/name: penpot-backend
        app.kubernetes.io/instance: penpot
    spec:
      serviceAccountName: penpot
      securityContext:
        fsGroup: 1001
      containers:
        - name: penpot-backend
          image: "penpotapp/backend:2.17.2"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - all
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1001
          volumeMounts:
            - mountPath: "/opt/data/assets"
              name: app-data
              readOnly: false
          ports:
            - name: http
              containerPort: 6060
              protocol: TCP
          resources:
            limits: {}
            requests: {}
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /readyz
              port: http
            periodSeconds: 10
      volumes:
      - name: app-data
        emptyDir: {}
---
# Source: penpot/templates/exporter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penpot-exporter
  namespace: adhar-system
  labels:
    helm.sh/chart: penpot-1.9.0
    app.kubernetes.io/name: penpot
    app.kubernetes.io/instance: penpot
    app.kubernetes.io/version: "2.17.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: penpot-exporter
      app.kubernetes.io/instance: penpot
  template:
    metadata:
      labels:
        app: penpot-exporter
        app.kubernetes.io/name: penpot-exporter
        app.kubernetes.io/instance: penpot
    spec:
      serviceAccountName: penpot
      securityContext:
        fsGroup: 1001
      containers:
        - name: penpot-exporter
          image: "penpotapp/exporter:2.17.2"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - all
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1001
          volumeMounts:
          ports:
            - name: http
              containerPort: 6061
              protocol: TCP
          resources:
            limits: {}
            requests: {}
      volumes:
---
# Source: penpot/templates/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penpot-frontend
  namespace: adhar-system
  labels:
    helm.sh/chart: penpot-1.9.0
    app.kubernetes.io/name: penpot
    app.kubernetes.io/instance: penpot
    app.kubernetes.io/version: "2.17.2"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: penpot-frontend
      app.kubernetes.io/instance: penpot
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: penpot-frontend
        app.kubernetes.io/name: penpot-frontend
        app.kubernetes.io/instance: penpot
    spec:
      serviceAccountName: penpot
      securityContext:
        fsGroup: 1001
      containers:
        - name: penpot-frontend
          image: "penpotapp/frontend:2.17.2"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - all
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1001
          volumeMounts:
            - mountPath: /opt/data/assets
              name: app-data
              readOnly: false
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits: {}
            requests: {}
      volumes:
      - name: app-data
        emptyDir: {}
